# GraphISOBench

./: .gitignore  CMakeLists.txt  README.md  iso_brute  isomorphic_check_brute_force.cpp
.github/workflows/: cmake-single-platform.yml
src/: main.cpp
src/algorithms/: algorithm_factory.h  graph_isomorphism_algorithm.h  nauty_traces.cpp  nauty_traces.h  vf2.cpp  vf2.h  weisfeiler_lehman.cpp  weisfeiler_lehman.h
src/core/: graph.cpp  graph.h
